--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <p>He's the coolest!</p>
       </div>
       <div class="cta cta1">
-        <p class="price">Work</p>
-        <p>Check it out</p>
+        <p class="price">Stuff!</p>
+        <p>that Matt has done</p>
       </div>
       <!-- <div class="cta cta2">
         <p class="price">What's new</p>
