--- a/about.html
+++ b/about.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/style.css">
-  <link rel="stylesheet" href="assets/matt.css"> 
+  <link rel="stylesheet" href="assets/matt.css">
+  <title>Matt Fucking Delamater!</title>
 </head>
+
 <body>
-  
-</body>
-</html>
+  <div class="wrapper">
+    <header>
+      <h1 class="logo">Matt Delamater</h1>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
+    </header>
+
+
+    </div>
+    </body>
