--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Media</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="resume.html">Resume</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -34,7 +34,7 @@
       </div>
       <div class="cta cta1">
         <p class="price">Stuff!</p>
-        <p>that Matt has done</p>
+        <p>Matt has done stuff</p>
       </div>
       <!-- <div class="cta cta2">
         <p class="price">What's new</p>
