--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1 class="logo">Matt Delamater</h1>
+      <h1 class="logo"><a href="index.html">Matt Delamater</a></h1>
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
