--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,71 @@
         <span></span>
       </label>
     </header>
+  </div>
+    
+  <section class="gallery">
+    <h2>Images</h2>
+      <img src="images/1.jpg" alt="">
+      <img src="images/2.jpg" alt="">
+      <img src="images/3.jpg" alt="">
+      <img src="images/4.jpg" alt="">
+      <img src="images/5.jpg" alt="">
+      <img src="images/6.jpg" alt="">
+      <img src="images/7.jpg" alt="">
+      <img src="images/8.jpg" alt="">
+      <img src="images/9.png" alt="">
+      <img src="images/10.png" alt="">
+      <img src="images/11.png" alt="">
+      <img src="images/12.png" alt="">
+      <img src="images/13.png" alt="">
+      <img src="images/14.png" alt="">
+    </section>
+  
 
-    </div>
+
+    <!-- <script>
+      const gallery = document.querySelector('.gallery');
+      const overlay = document.querySelector('.overlay');
+      const overlayImage = overlay.querySelector('img');
+      const overlayClose = overlay.querySelector('.close');
+  
+      function generateHTML([h, v]) {
+        return `
+          <div class="item h${h} v${v}">
+            <img src="images/${randomNumber(8)}.jpg" || src="images/${randomNumber(6)}.jpg">
+            <div class="item__overlay">
+              <button>View →</button>
+            </div>
+          </div>
+        `;
+      }
+  
+      function randomNumber(limit) {
+        return Math.floor(Math.random() * limit) + 1;
+      }
+  
+      function handleClick(e) {
+        const src = e.currentTarget.querySelector('img').src;
+        overlayImage.src = src;
+        overlay.classList.add('open');
+      }
+  
+  
+      function close() {
+        overlay.classList.remove('open');
+      }
+  
+      const digits = Array.from({ length: 20 }, () => [randomNumber(4), randomNumber(4)]).concat([[1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1]])
+  
+      const html = digits.map(generateHTML).join('');
+      gallery.innerHTML = html;
+  
+      const items = document.querySelectorAll('.item');
+  
+      items.forEach(item => item.addEventListener('click', handleClick));
+  
+      overlayClose.addEventListener('click', close);
+  
+    </script> -->
   </body>
 </html>
