--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label">
@@ -85,7 +85,7 @@
     </section> -->
 
     <section class="about">
-      <img src="images/12079879_10208168477548466_3278549010225683636_o.jpg" alt="Yummy Matt" class="about__mockup">
+      <img src="assets/images/12079879_10208168477548466_3278549010225683636_o.jpg" alt="Yummy Matt" class="about__mockup">
       <div class="about__details">
         <h2>All About Matt</h2>
         <p>The most handsome and charming man that you'll probably ever meet</p>
