--- a/gallery.html
+++ b/gallery.html
@@ -38,9 +38,9 @@
       <img src="images/6.jpg" alt="">
       <img src="images/7.jpg" alt="">
       <img src="images/8.jpg" alt="">
-      <img src="images/9.png" alt="">
+      <img src="images/9.jpg" alt="">
       <img src="images/10.png" alt="">
-      <img src="images/11.png" alt="">
+      <img src="images/11.jpg" alt="">
       <img src="images/12.png" alt="">
       <img src="images/13.png" alt="">
       <img src="images/14.png" alt="">
